--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Dosis:400,700" rel="stylesheet" />
     <link href="style.css" rel="stylesheet" />
+    <script src = "index.js" ></script>
 
     <table>
       <tr>
@@ -17,73 +18,73 @@
         <th>Advanced</th>
       </tr>
       <tr>
-        <td><input type="checkbox" id="skill1" name="skill1" value="Bike">
+        <td><input type="checkbox" id="skill1" name="skill1" value="Bike" onclick = "handler('1')">
           <label for="skill1">Singing</label><br></td>
-        <td><input type="checkbox" id="beg" name="beg" value="beg">
+        <td><input type="checkbox" id="beg1" name="beg" value="beg">
           <label for="beg"></label><br></td>
-        <td><input type="checkbox" id="med" name="med" value="med">
+        <td><input type="checkbox" id="med1" name="med" value="med">
           <label for="med"></label><br></td>
-        <td><input type="checkbox" id="adv" name="adv" value="adv">
+        <td><input type="checkbox" id="adv1" name="adv" value="adv">
           <label for="adv"></label><br></td>                    
       </tr>
       <tr>
         <td><input type="checkbox" id="skill2" name="skill2" value="Bike">
           <label for="skill2">Singing</label><br></td>
-        <td><input type="checkbox" id="beg" name="beg" value="beg">
+        <td><input type="checkbox" id="beg2" name="beg" value="beg">
           <label for="beg"></label><br></td>
-        <td><input type="checkbox" id="med" name="med" value="med">
+        <td><input type="checkbox" id="med2" name="med" value="med">
           <label for="med"></label><br></td>
-        <td><input type="checkbox" id="adv" name="adv" value="adv">
+        <td><input type="checkbox" id="adv2" name="adv" value="adv">
           <label for="adv"></label><br></td>  
       </tr>
       <tr>
         <td><input type="checkbox" id="skill3" name="skill3" value="Bike">
           <label for="skill3">Singing</label><br></td>
-        <td><input type="checkbox" id="beg" name="beg" value="beg">
+        <td><input type="checkbox" id="beg3" name="beg" value="beg">
           <label for="beg"></label><br></td>
-        <td><input type="checkbox" id="med" name="med" value="med">
+        <td><input type="checkbox" id="med3" name="med" value="med">
           <label for="med"></label><br></td>
-        <td><input type="checkbox" id="adv" name="adv" value="adv">
+        <td><input type="checkbox" id="adv3" name="adv" value="adv">
           <label for="adv"></label><br></td>  
       </tr>
       <tr>
         <td><input type="checkbox" id="skill4" name="skill4" value="Bike">
           <label for="skill4">Singing</label><br></td>
-        <td><input type="checkbox" id="beg" name="beg" value="beg">
+        <td><input type="checkbox" id="beg4" name="beg" value="beg">
           <label for="beg"></label><br></td>
-        <td><input type="checkbox" id="med" name="med" value="med">
+        <td><input type="checkbox" id="med4" name="med" value="med">
           <label for="med"></label><br></td>
-        <td><input type="checkbox" id="adv" name="adv" value="adv">
+        <td><input type="checkbox" id="adv4" name="adv" value="adv">
           <label for="adv"></label><br></td>  
       </tr>
       <tr>
         <td><input type="checkbox" id="skill5" name="skill5" value="Bike">
           <label for="skill5">Singing</label><br></td>
-        <td><input type="checkbox" id="beg" name="beg" value="beg">
+        <td><input type="checkbox" id="beg5" name="beg" value="beg">
           <label for="beg"></label><br></td>
-        <td><input type="checkbox" id="med" name="med" value="med">
+        <td><input type="checkbox" id="med5" name="med" value="med">
           <label for="med"></label><br></td>
-        <td><input type="checkbox" id="adv" name="adv" value="adv">
+        <td><input type="checkbox" id="adv5" name="adv" value="adv">
           <label for="adv"></label><br></td>  
       </tr>
       <tr>
         <td><input type="checkbox" id="skill6" name="skill6" value="Bike">
           <label for="skill6">Singing</label><br></td>
-        <td><input type="checkbox" id="beg" name="beg" value="beg">
+        <td><input type="checkbox" id="beg6" name="beg" value="beg">
           <label for="beg"></label><br></td>
-        <td><input type="checkbox" id="med" name="med" value="med">
+        <td><input type="checkbox" id="med6" name="med" value="med">
           <label for="med"></label><br></td>
-        <td><input type="checkbox" id="adv" name="adv" value="adv">
+        <td><input type="checkbox" id="adv6" name="adv" value="adv">
           <label for="adv"></label><br></td>  
       </tr>
       <tr>
         <td><input type="checkbox" id="skill7" name="skill7" value="Bike">
           <label for="skill7">Singing</label><br></td>
-        <td><input type="checkbox" id="beg" name="beg" value="beg">
+        <td><input type="checkbox" id="beg7" name="beg" value="beg">
           <label for="beg"></label><br></td>
-        <td><input type="checkbox" id="med" name="med" value="med">
+        <td><input type="checkbox" id="med7" name="med" value="med">
           <label for="med"></label><br></td>
-        <td><input type="checkbox" id="adv" name="adv" value="adv">
+        <td><input type="checkbox" id="adv7" name="adv" value="adv">
           <label for="adv"></label><br></td>  
       </tr>
       <tr>
