--- a/index.html
+++ b/index.html
@@ -19,102 +19,102 @@
       </tr>
       <tr>
         <td><input type="checkbox" id="skill1" name="skill1" value="Bike" onclick = "handler('1')">
-          <label for="skill1">Singing</label><br></td>
-        <td><input type="checkbox" id="beg1" name="beg" value="beg">
+          <label for="skill1">Enthusiasm</label><br></td>
+        <td><input type="checkbox" id="beg1" name="beg" value="beg" onclick = "handler1('1')">
           <label for="beg"></label><br></td>
-        <td><input type="checkbox" id="med1" name="med" value="med">
+        <td><input type="checkbox" id="med1" name="med" value="med"  onclick = "handler1('1')">
           <label for="med"></label><br></td>
-        <td><input type="checkbox" id="adv1" name="adv" value="adv">
+        <td><input type="checkbox" id="adv1" name="adv" value="adv"  onclick = "handler1('1')">
           <label for="adv"></label><br></td>                    
       </tr>
       <tr>
-        <td><input type="checkbox" id="skill2" name="skill2" value="Bike">
-          <label for="skill2">Singing</label><br></td>
-        <td><input type="checkbox" id="beg2" name="beg" value="beg">
+        <td><input type="checkbox" id="skill2" name="skill2" value="Bike" onclick = "handler('2')">
+          <label for="skill2">Programming</label><br></td>
+        <td><input type="checkbox" id="beg2" name="beg" value="beg" onclick = "handler1('2')">
           <label for="beg"></label><br></td>
-        <td><input type="checkbox" id="med2" name="med" value="med">
+        <td><input type="checkbox" id="med2" name="med" value="med" onclick = "handler1('2')">
           <label for="med"></label><br></td>
-        <td><input type="checkbox" id="adv2" name="adv" value="adv">
+        <td><input type="checkbox" id="adv2" name="adv" value="adv"  onclick = "handler1('2')">
           <label for="adv"></label><br></td>  
       </tr>
       <tr>
-        <td><input type="checkbox" id="skill3" name="skill3" value="Bike">
-          <label for="skill3">Singing</label><br></td>
-        <td><input type="checkbox" id="beg3" name="beg" value="beg">
+        <td><input type="checkbox" id="skill3" name="skill3" value="Bike" onclick = "handler('3')">
+          <label for="skill3">Alchemy</label><br></td>
+        <td><input type="checkbox" id="beg3" name="beg" value="beg" onclick = "handler1('3')">
           <label for="beg"></label><br></td>
-        <td><input type="checkbox" id="med3" name="med" value="med">
+        <td><input type="checkbox" id="med3" name="med" value="med" onclick = "handler1('3')">
           <label for="med"></label><br></td>
-        <td><input type="checkbox" id="adv3" name="adv" value="adv">
+        <td><input type="checkbox" id="adv3" name="adv" value="adv" onclick = "handler1('3')">
           <label for="adv"></label><br></td>  
       </tr>
       <tr>
-        <td><input type="checkbox" id="skill4" name="skill4" value="Bike">
-          <label for="skill4">Singing</label><br></td>
-        <td><input type="checkbox" id="beg4" name="beg" value="beg">
+        <td><input type="checkbox" id="skill4" name="skill4" value="Bike" onclick = "handler('4')">
+          <label for="skill4">Lack of Critical Thinking</label><br></td>
+        <td><input type="checkbox" id="beg4" name="beg" value="beg" onclick = "handler1('4')">
           <label for="beg"></label><br></td>
-        <td><input type="checkbox" id="med4" name="med" value="med">
+        <td><input type="checkbox" id="med4" name="med" value="med" onclick = "handler1('4')">
           <label for="med"></label><br></td>
-        <td><input type="checkbox" id="adv4" name="adv" value="adv">
+        <td><input type="checkbox" id="adv4" name="adv" value="adv" onclick = "handler1('4')">
           <label for="adv"></label><br></td>  
       </tr>
       <tr>
-        <td><input type="checkbox" id="skill5" name="skill5" value="Bike">
-          <label for="skill5">Singing</label><br></td>
-        <td><input type="checkbox" id="beg5" name="beg" value="beg">
+        <td><input type="checkbox" id="skill5" name="skill5" value="Bike" onclick = "handler('5')">
+          <label for="skill5">Data Analysis</label><br></td>
+        <td><input type="checkbox" id="beg5" name="beg" value="beg" onclick = "handler1('5')">
           <label for="beg"></label><br></td>
-        <td><input type="checkbox" id="med5" name="med" value="med">
+        <td><input type="checkbox" id="med5" name="med" value="med" onclick = "handler1('5')">
           <label for="med"></label><br></td>
-        <td><input type="checkbox" id="adv5" name="adv" value="adv">
+        <td><input type="checkbox" id="adv5" name="adv" value="adv" onclick = "handler1('5')">
           <label for="adv"></label><br></td>  
       </tr>
       <tr>
-        <td><input type="checkbox" id="skill6" name="skill6" value="Bike">
-          <label for="skill6">Singing</label><br></td>
-        <td><input type="checkbox" id="beg6" name="beg" value="beg">
+        <td><input type="checkbox" id="skill6" name="skill6" value="Bike" onclick = "handler('6')">
+          <label for="skill6">Engineering</label><br></td>
+        <td><input type="checkbox" id="beg6" name="beg" value="beg" onclick = "handler1('6')">
           <label for="beg"></label><br></td>
-        <td><input type="checkbox" id="med6" name="med" value="med">
+        <td><input type="checkbox" id="med6" name="med" value="med" onclick = "handler1('6')">
           <label for="med"></label><br></td>
-        <td><input type="checkbox" id="adv6" name="adv" value="adv">
+        <td><input type="checkbox" id="adv6" name="adv" value="adv" onclick = "handler1('6')">
           <label for="adv"></label><br></td>  
       </tr>
       <tr>
-        <td><input type="checkbox" id="skill7" name="skill7" value="Bike">
-          <label for="skill7">Singing</label><br></td>
-        <td><input type="checkbox" id="beg7" name="beg" value="beg">
+        <td><input type="checkbox" id="skill7" name="skill7" value="Bike" onclick = "handler('7')">
+          <label for="skill7">Muscles</label><br></td>
+        <td><input type="checkbox" id="beg7" name="beg" value="beg" onclick = "handler1('7')">
           <label for="beg"></label><br></td>
-        <td><input type="checkbox" id="med7" name="med" value="med">
+        <td><input type="checkbox" id="med7" name="med" value="med" onclick = "handler1('7')">
           <label for="med"></label><br></td>
-        <td><input type="checkbox" id="adv7" name="adv" value="adv">
+        <td><input type="checkbox" id="adv7" name="adv" value="adv" onclick = "handler1('7')">
           <label for="adv"></label><br></td>  
       </tr>
       <tr>
-        <td><input type="checkbox" id="skill7" name="skill7" value="Bike">
-          <label for="skill7">Singing</label><br></td>
-        <td><input type="checkbox" id="beg" name="beg" value="beg">
+        <td><input type="checkbox" id="skill8" name="skill8" value="Bike" onclick = "handler('8')">
+          <label for="skill8">Oral Communication</label><br></td>
+        <td><input type="checkbox" id="beg8" name="beg" value="beg" onclick = "handler1('8')">
           <label for="beg"></label><br></td>
-        <td><input type="checkbox" id="med" name="med" value="med">
+        <td><input type="checkbox" id="med8" name="med" value="med" onclick = "handler1('8')">
           <label for="med"></label><br></td>
-        <td><input type="checkbox" id="adv" name="adv" value="adv">
+        <td><input type="checkbox" id="adv8" name="adv" value="adv" onclick = "handler1('8')">
           <label for="adv"></label><br></td>  
       </tr>
       <tr>
-        <td><input type="checkbox" id="skill8" name="skill8" value="Bike">
-          <label for="skill8">Singing</label><br></td>
-        <td><input type="checkbox" id="beg" name="beg" value="beg">
+        <td><input type="checkbox" id="skill9" name="skill9" value="Bike" onclick = "handler('9')">
+          <label for="skill9">Problem Solving</label><br></td>
+        <td><input type="checkbox" id="beg9" name="beg" value="beg" onclick = "handler1('9')">
           <label for="beg"></label><br></td>
-        <td><input type="checkbox" id="med" name="med" value="med">
+        <td><input type="checkbox" id="med9" name="med" value="med" onclick = "handler1('9')">
           <label for="med"></label><br></td>
-        <td><input type="checkbox" id="adv" name="adv" value="adv">
+        <td><input type="checkbox" id="adv9" name="adv" value="adv" onclick = "handler1('9')">
           <label for="adv"></label><br></td>  
       </tr>
       <tr>
-        <td><input type="checkbox" id="skill9" name="skill9" value="Bike">
-          <label for="skill9">Singing</label><br></td>
-        <td><input type="checkbox" id="beg" name="beg" value="beg">
+        <td><input type="checkbox" id="skill10" name="skill10" value="Bike" onclick = "handler('10')">
+          <label for="skill10">Cooking</label><br></td>
+        <td><input type="checkbox" id="beg10" name="beg" value="beg" onclick = "handler1('10')">
           <label for="beg"></label><br></td>
-        <td><input type="checkbox" id="med" name="med" value="med">
+        <td><input type="checkbox" id="med10" name="med" value="med" onclick = "handler1('10')">   
           <label for="med"></label><br></td>
-        <td><input type="checkbox" id="adv" name="adv" value="adv">
+        <td><input type="checkbox" id="adv10" name="adv" value="adv" onclick = "handler1('10')">
           <label for="adv"></label><br></td>  
       </tr>
     </table>
