test if i am committing

--- a/index.html
+++ b/index.html
@@ -9,6 +9,35 @@
     <link href="https://fonts.googleapis.com/css?family=Dosis:400,700" rel="stylesheet" />
     <link href="style.css" rel="stylesheet" />
     <script src = "index.js" ></script>
+    
+    <table>
+      <tr>
+        <th>Job Title</th>
+      </tr>
+      <tr>
+        <td><input type="checkbox" id="job1" name="job1" value="job1">
+           <label for="job1">Goon</label><br></td>
+       <td><input type="checkbox" id="job1" name="job1" value="job1">
+           <label for="job1">Financial Analyst</label><br></td>
+        <td><input type="checkbox" id="job1" name="job1" value="job1">
+           <label for="job1">Heavy Weapons Specialist</label><br></td>
+        <td><input type="checkbox" id="job1" name="job1" value="job1">
+           <label for="job1">Engineer</label><br></td>
+        <td><input type="checkbox" id="job1" name="job1" value="job1">
+            <label for="job1">Wizard</label><br></td>
+        <td><input type="checkbox" id="job1" name="job1" value="job1">
+            <label for="job1">Right Hand Woman</label><br></td>
+        <td><input type="checkbox" id="job1" name="job1" value="job1">
+            <label for="job1">Executioner</label><br></td> 
+        <td><input type="checkbox" id="job1" name="job1" value="job1">
+            <label for="job1">Hacker</label><br></td>
+        <td><input type="checkbox" id="job1" name="job1" value="job1">
+            <label for="job1">Manager</label><br></td>
+        <td><input type="checkbox" id="job1" name="job1" value="job1">
+            <label for="job1">Cook</label><br></td>   
+       </tr>
+    </table>
+    
 
     <table>
       <tr>
