fixed index.html to work w express

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>Testing iCIMS API hi tidctfvv</title>
 
     <link href="https://fonts.googleapis.com/css?family=Dosis:400,700" rel="stylesheet" />
-    <link href="style.css" rel="stylesheet" />
-    <script src = "index.js" ></script>
+    <link href="css/style.css" rel="stylesheet" />
+    <script src="js/index.js" ></script>
     
     <table>
       <tr>
-        <th>Job Tijjjjjtle</th>
+        <th>Job Title</th>
       </tr>
       <tr>
         <td><input type="checkbox" id="job1" name="job1" value="job1">
@@ -152,6 +152,5 @@
 
   <body>
     <div id="root"></div>
-    <script src="First.js"></script>
   </body>
 </html>
