--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Testing iCIMS API hi tidctfvv</title>
+    <img src="imgs/logo.png" alt="Logo" width="500" length="100" class="center">
 
     <link href="https://fonts.googleapis.com/css?family=Dosis:400,700" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
