--- a/index.html
+++ b/index.html
@@ -68,25 +68,25 @@
         <th>Job Title</th>
       </tr>
       <tr>
-        <td><input type="checkbox"  name="job1" value="Goon">
+        <td><input type="checkbox"  name="Goon" value="Goon">
            <label for="job1">Goon</label><br></td>
-       <td><input type="checkbox"  name="job1" value="Financial Analyst">
+       <td><input type="checkbox"  name="Financial Analyst" value="Financial Analyst">
            <label for="job1">Financial Analyst</label><br></td>
-        <td><input type="checkbox"  name="job1" value="Heavy Weapons Specialist">
+        <td><input type="checkbox"  name="Heavy Weapons Specialist" value="Heavy Weapons Specialist">
            <label for="job1">Heavy Weapons Specialist</label><br></td>
-        <td><input type="checkbox"  name="job1" value="Engineer">
+        <td><input type="checkbox"  name="Engineer" value="Engineer">
            <label for="job1">Engineer</label><br></td>
-        <td><input type="checkbox"  name="job1" value="Wizard">
+        <td><input type="checkbox"  name="Wizard" value="Wizard">
             <label for="job1">Wizard</label><br></td>
-        <td><input type="checkbox"  name="job1" value="Right Hand Woman">
+        <td><input type="checkbox"  name="Right Hand Woman" value="Right Hand Woman">
             <label for="job1">Right Hand Woman</label><br></td>
-        <td><input type="checkbox"  name="job1" value="Executioner">
+        <td><input type="checkbox"  name="Executioner" value="Executioner">
             <label for="job1">Executioner</label><br></td> 
-        <td><input type="checkbox"  name="job1" value="Hacker">
+        <td><input type="checkbox"  name="Hacker" value="Hacker">
             <label for="job1">Hacker</label><br></td>
-        <td><input type="checkbox"  name="job1" value="Manager">
+        <td><input type="checkbox"  name="Manager" value="Manager">
             <label for="job1">Manager</label><br></td>
-        <td><input type="checkbox"  name="job1" value="Cook">
+        <td><input type="checkbox"  name="Cook" value="Cook">
             <label for="job1">Cook</label><br></td>
        </tr>
     </table>
