--- a/index2.html
+++ b/index2.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+    <br><br>
+    <div class="title">
+        <style>
+            .img-container {
+              text-align: center;
+              display: block;
+            }
+          </style>
+        <span class="img-container">
+        <img src="imgs/logo.png" alt="dropdown" width="75%" length="10%">
+    </span>
+      </div>
 </head>
 <body>
+<br><br><br>
+<h1><p style="text-align:center">CONGRATULATIONS!</p></h1>
+<h2><p style="text-align:center">Your Minions:</p></h2>
+<div style="width:17%;height:100px;border:1px solid #000;">This is a rectangle!</div>
 
-<h1>CONGATULATIONS!</h1>
-<h2>Your Minons:</h2>
-<p>My first paragraph.</p>
 
 </body>
 </html>
