--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <h2 style="padding-left: 60%;" class="choose">CHOOSE YOUR SKILLS</h2>
         </div>
         <form id="filterForm" action="/filter" method="post">
-          <select class="states" id="states" multiple>
+          <select class="states" name="states" id="states" multiple>
             <option value="al">Alabama</option>
             <option value="ak">Alaska</option>
             <option value="az">Arizona</option>
