--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
           <h2 style="padding-left: 50px;" class="choose">CHOOSE YOUR STATES</h2>
         </div>
         <div id="jobs">
-          <img src="imgs/jobs.png" alt="dropdown" width="700" length="500">
+          <img src="imgs/jobs3.png" alt="dropdown" width="700" length="2000">
           <h2 style="padding-left: 30%;" class="choose">CHOOSE YOUR JOBS</h2>
         </div>
-        <div>
-          <img src="imgs/skills.png" alt="dropdown" width="700" length="500">
-          <h2 style="padding-left: 60%;" class="choose">CHOOSE YOUR SKILLS</h2>
+        <div style="padding-left: 13%;">
+          <img src="imgs/skills3.png" alt="dropdown" width="400" length="200">
+          <h2 style="padding-left: 70%;" class="choose">CHOOSE YOUR SKILLS</h2>
         </div>
         <form id="filterForm" action="/filter" method="post">
           <select class="states" name="states" id="states" multiple>
